--- a/security.html
+++ b/security.html
@@ -79,7 +79,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/113134/jobs/4331691002'>Job Application for Sr. Information Security Analyst at Cast & Crew Entertainment Services, LLC</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/113134/jobs/4331691002'>Job Application for Sr. Information Security Analyst at Cast & Crew Entertainment Services, LLC</a></h5> 
 <p><span class="badge badge-light">California, United States</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -118,7 +118,7 @@ initiatives and risk management activities. Utilizes knowledge of industry best?
 <p>4 days ago ... VA-Ft Belvoir-8201 Beulah St-WVA1155 is now hiring a Information Security 
 Analyst - TS/SCI required in Ft Belvoir, Virginia. Review all of the job details and?...</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/softcat/job/oCPDafwY'>Softcat Careers - Security Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/softcat/job/oCPDafwY'>Softcat Careers - Security Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -128,7 +128,7 @@ Analyst - TS/SCI required in Ft Belvoir, Virginia. Review all of the job details
 within AbbVie's enterprise-wide information security team, will be responsible for
 ?...</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/GBM1/743999687702856-cloud-security-engineer-aws-'>GBM Cloud Security Engineer (AWS) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/GBM1/743999687702856-cloud-security-engineer-aws-'>GBM Cloud Security Engineer (AWS) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -184,7 +184,7 @@ and?...</p>
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://www.workable.com/j/6359D92EEA'>Viva Wallet - Jobs: Security Engineer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/6359D92EEA'>Viva Wallet - Jobs: Security Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 16, 2019 ... Apply online for the job of Security Engineer at Viva Wallet.</p>
 <hr/>
@@ -200,11 +200,11 @@ and?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Jul 15, 2019 ... Apply online for the job of Security Analyst PL (P366TS) at CINQ Technologies.</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/crowdstrike/job/oVQCafwh'>CrowdStrike Careers - Security Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/crowdstrike/job/oVQCafwh'>CrowdStrike Careers - Security Analyst</a></h5> 
 <p><span class="badge badge-light">Arlington</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/kennasecurity/d2bc48ad-b03e-4e69-8db8-1dd02c9d1c20'>Kenna Security - Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/kennasecurity/d2bc48ad-b03e-4e69-8db8-1dd02c9d1c20'>Kenna Security - Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -243,12 +243,12 @@ tackling?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://mitre.referrals.selectminds.com/jobs/cyber-security-data-analytics-engineer-6495'>Cyber Security Data Analytics Engineer - MITRE Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mitre.referrals.selectminds.com/jobs/cyber-security-data-analytics-engineer-6495'>Cyber Security Data Analytics Engineer - MITRE Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Combine CyberSecurity domain expertise and contemporary data science skills 
 to enhance cyber adversary detection, network defense, and SOC process?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oJWx9fw5&__jvst=Employee+Referral&__jvsd=s3C3Jfwb&__jvsc=Twitter&bid=nH0QTKwF'>ServiceNow Careers - Senior Security Risk Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oJWx9fw5&__jvst=Employee+Referral&__jvsd=s3C3Jfwb&__jvsc=Twitter&bid=nH0QTKwF'>ServiceNow Careers - Senior Security Risk Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
@@ -294,7 +294,7 @@ senior Network and Security engineer to deliver network and security services to
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/MindPointGroupLLC/743999692240532-cloud-security-engineer'>MindPoint Group, LLC Cloud Security Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/MindPointGroupLLC/743999692240532-cloud-security-engineer'>MindPoint Group, LLC Cloud Security Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -350,7 +350,7 @@ senior Network and Security engineer to deliver network and security services to
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/curriculumassociates/job/ozzCafwE'>Curriculum Associates Careers - Infrastructure Security Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/curriculumassociates/job/ozzCafwE'>Curriculum Associates Careers - Infrastructure Security Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -393,7 +393,7 @@ Loading.</p>
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Apply online for the job of MS Cloud Security Engineer at Girteka Logistics.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://emw.workable.com/j/E32FDA7630?viewed=true'>AAS2089-1 - IT/Cyber Security Engineer, Brussels ... - EMW, Inc. - Jobs</a></h5> 
+<h5><a href='https://emw.workable.com/j/E32FDA7630?viewed=true'>AAS2089-1 - IT/Cyber Security Engineer, Brussels ... - EMW, Inc. - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>20 hours ago ... Apply online for the job of AAS2089-1 - IT/Cyber Security Engineer, Brussels - 
 Tue 23rd July (reissue) at EMW, Inc.</p>
@@ -414,7 +414,7 @@ Tue 23rd July (reissue) at EMW, Inc.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/MerkleInc/743999692169917-senior-security-analyst-managed-hosting'>Merkle Inc. Senior Security Analyst, Managed Hosting | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/MerkleInc/743999692169917-senior-security-analyst-managed-hosting'>Merkle Inc. Senior Security Analyst, Managed Hosting | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
