--- a/ui.html
+++ b/ui.html
@@ -90,7 +90,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://we-recruit.join.com/jobs/265559-team-leader-engineering-zurich'>Job @ WE RECRUIT (Z?rich): Team Leader Engineering... | JOIN</a></h5> 
+<h5><a href='https://we-recruit.join.com/jobs/265559-team-leader-engineering-zurich'>Job @ WE RECRUIT (Z?rich): Team Leader Engineering... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -102,7 +102,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://we-recruit.join.com/jobs/257529-team-leader-engineering-contracting'>Job @ WE RECRUIT (Z?rich): Team Leader Engineering... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://we-recruit.join.com/jobs/257529-team-leader-engineering-contracting'>Job @ WE RECRUIT (Z?rich): Team Leader Engineering... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -110,7 +110,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://we-recruit.join.com/jobs/264770-sourcer-recruiter-life-science-recruitment'>Job @ WE RECRUIT (Basel): Sourcer/Recruiter Life S... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://we-recruit.join.com/jobs/264770-sourcer-recruiter-life-science-recruitment'>Job @ WE RECRUIT (Basel): Sourcer/Recruiter Life S... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -214,7 +214,7 @@ Flotte von TUI Cruises in Berlin (published: 12.06.2019). Apply now or check?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='http://codal.applytojob.com/apply/V5zBUjtqxb/Senior-UXUI-Designer'>Senior UX/UI Designer - Codal - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://codal.applytojob.com/apply/V5zBUjtqxb/Senior-UXUI-Designer'>Senior UX/UI Designer - Codal - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -358,7 +358,7 @@ objectively measure impact and optimize engineering processes; Meeting?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999692351755-ui-programmers-based-in-singapore-'>Ubisoft UI Programmers (based in Singapore) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999692351755-ui-programmers-based-in-singapore-'>Ubisoft UI Programmers (based in Singapore) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -434,7 +434,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/ArthurGrandTechnologiesInc/743999692111442-sr-ui-developer-web-developer-need-only-us-citizens-'>Arthur Grand Technologies Inc Sr UI developer / Web developer (Need only US Citizens) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ArthurGrandTechnologiesInc/743999692111442-sr-ui-developer-web-developer-need-only-us-citizens-'>Arthur Grand Technologies Inc Sr UI developer / Web developer (Need only US Citizens) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
